--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">BBAP</string>
+    
+    <string-array name="beer">
+        <item>chimay bleue</item>
+        <item>orval</item>
+        <item>rochefort 8</item>
+    </string-array>
+    
 </resources>
